增加谷歌和百度认证

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     
     <!-- 搜索引擎验证 -->
     <meta name="msvalidate.01" content="6CB4813A96C4C72FA2A385AA5628FEAC" />
-    <meta name="baidu-site-verification" content="your-baidu-code" />
-    <meta name="google-site-verification" content="your-google-code" />
+    <meta name="baidu-site-verification" content="codeva-9niFzY0QFq" />
+    <meta name="google-site-verification" content="mOH6BrXs4tS1RYX4NpT1gURfyELlD9GtSyh3C1412m8" />
     
     <!-- Open Graph 标签 -->
     <meta property="og:title" content="名字大师 - AI智能起名 | 免费宝宝取名" />
