feat: 添加搜索引擎认证和优化SEO
- 添加百度、Google、Bing搜索引擎认证
- 优化SEO相关meta标签
- 完善结构化数据标记
- 更新网站域名配置
- 优化站点描述和关键词

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
     <meta name="theme-color" content="#ffffff" />
     
     <!-- 搜索引擎验证 -->
-    <meta name="baidu-site-verification" content="your-baidu-code" />
-    <meta name="google-site-verification" content="your-google-code" />
+    <meta name="msvalidate.01" content="6CB4813A96C4C72FA2A385AA5628FEAC" />
+    <meta name="baidu-site-verification" content="codeva-9niFzY0QFq" />
+    <meta name="google-site-verification" content="mOH6BrXs4tS1RYX4NpT1gURfyELlD9GtSyh3C1412m8" />
     
     <!-- 安全策略 -->
     <meta http-equiv="Content-Security-Policy" content="
